@@ -3,6 +3,7 @@
 	* generator: Add ".by_value" to struct arguments
 	* generator: Add struct alias hook
 	* examples: Added
+	* examples/shapes_basic_shapes.rb: Added
 
 2021-10-23  vaiorabbit  <http://twitter.com/vaiorabbit>
 
